Add Unraid API config to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ startup/
 room_assistant/
 www/tmp/
 .storage/hacs/
+.storage/unraid/
 .storage/room_assistant/
 .storage/androidtv_*
 .storage/auth*
