--- a/automations.yaml
+++ b/automations.yaml
@@ -1,607 +1,12 @@
-- id: tv-time-bedroom
-  alias: Bedroom - Lights
-  trigger:
-  - entity_id: media_player.bedroom_tv
-    platform: state
-  - platform: state
-    entity_id: binary_sensor.bedroom_trisensor_motion
-  - entity_id: binary_sensor.bedroom_bright
-    platform: state
-  - entity_id: input_boolean.sleep_mode
-    platform: state
-  condition: []
-  action:
-  - choose:
-    - conditions:
-      - condition: state
-        entity_id: media_player.bedroom_tv
-        state: 'on'
-      - condition: state
-        entity_id: input_boolean.sleep_mode
-        state: 'off'
-      sequence:
-      - service: light.turn_on
-        data:
-          brightness_pct: 20
-          transition: 3
-        target:
-          entity_id: light.bedroom
-    default:
-    - condition: state
-      entity_id: binary_sensor.bedroom_trisensor_motion
-      state: 'off'
-      for: 00:20:00
-    - service: light.turn_off
-      data:
-        transition: 3
-      target:
-        entity_id: light.bedroom
-  mode: restart
-- id: disable-sleep-mode
-  alias: Morning - Startup
-  trigger:
-  - at: input_datetime.morning_startup
-    platform: time
-  action:
-  - entity_id: input_boolean.sleep_mode
-    service: input_boolean.turn_off
-  - condition: state
-    entity_id: binary_sensor.people_home
-    state: 'on'
-  - service: climate.turn_on
-    data: {}
-    entity_id: climate.central
-  - service: climate.set_temperature
-    data:
-      entity_id: climate.central
-      temperature: '{{ states(''input_number.target_temperature'') | float }}'
-      hvac_mode: heat
-  - service: climate.set_temperature
-    data:
-      entity_id: climate.study
-      temperature: '{{ states(''input_number.target_temperature'') | float }}'
-      hvac_mode: heat
-  - service: climate.set_temperature
-    data:
-      entity_id: climate.bedroom
-      temperature: '{{ states(''input_number.target_temperature'') | float }}'
-      hvac_mode: heat
-  - service: climate.set_temperature
-    data:
-      entity_id: climate.bathroom
-      temperature: '{{ states(''input_number.target_temperature'') | float }}'
-      hvac_mode: heat
-  - service: climate.set_temperature
-    data:
-      entity_id: climate.toilet
-      temperature: 10
-      hvac_mode: heat
-  mode: single
-- id: request-location-update
-  alias: Location - Get Update
-  trigger:
-  - minutes: /10
-    platform: time_pattern
-  action:
-  - data:
-      message: request_location_update
-    service: notify.devices
-  mode: single
-- id: '1597910341178'
-  alias: Bathroom - Lights
-  description: ''
-  trigger:
-  - platform: state
-    entity_id: binary_sensor.bathroom_multisensor_motion
-  - platform: state
-    entity_id: sensor.bathroom_multisensor_humidity
-  - platform: state
-    entity_id: input_boolean.sleep_mode
-  condition: []
-  action:
-  - choose:
-    - conditions:
-      - condition: state
-        entity_id: binary_sensor.bathroom_multisensor_motion
-        state: 'on'
-      - condition: state
-        entity_id: input_boolean.sleep_mode
-        state: 'on'
-      sequence:
-      - service: light.turn_on
-        data:
-          brightness_pct: 1
-        target:
-          entity_id: light.bathroom
-    - conditions:
-      - condition: or
-        conditions:
-        - condition: and
-          conditions:
-          - condition: state
-            entity_id: input_boolean.sleep_mode
-            state: 'off'
-          - condition: state
-            entity_id: binary_sensor.bathroom_multisensor_motion
-            state: 'on'
-      sequence:
-      - service: light.turn_on
-        data:
-          transition: 3
-          brightness_pct: 100
-        target:
-          entity_id: light.bathroom
-    - conditions:
-      - condition: state
-        entity_id: binary_sensor.bathroom_multisensor_motion
-        state: 'off'
-        for: 00:08:00
-      sequence:
-      - service: light.turn_off
-        data: {}
-        entity_id: light.bathroom
-    default: []
-  mode: restart
-- id: '1598895158496'
-  alias: Kitchen - Lights
-  description: ''
-  trigger:
-  - platform: state
-    entity_id: binary_sensor.kitchen_trisensor_motion
-  - platform: state
-    entity_id: sun.sun
-  - platform: state
-    entity_id: binary_sensor.kitchen_bright
-  - platform: state
-    entity_id: input_number.kitchen_lux_level
-  - platform: state
-    entity_id: sensor.kitchen_trisensor_illuminance
-  condition: []
-  action:
-  - choose:
-    - conditions:
-      - condition: state
-        entity_id: binary_sensor.kitchen_trisensor_motion
-        state: 'on'
-      - condition: or
-        conditions:
-        - condition: state
-          entity_id: binary_sensor.kitchen_bright
-          state: 'off'
-        - condition: state
-          entity_id: sun.sun
-          state: below_horizon
-      sequence:
-      - service: light.turn_on
-        data:
-          brightness_pct: 100
-          transition: 3
-        target:
-          entity_id: light.kitchen
-    default:
-    - service: light.turn_off
-      data:
-        transition: 3
-      target:
-        entity_id: light.kitchen
-  mode: restart
-- id: Study_Lights
-  alias: Study - Lights
-  description: ''
-  trigger:
-  - platform: state
-    entity_id: binary_sensor.study_trisensor_motion
-  - entity_id: binary_sensor.study_bright
-    platform: state
-  - platform: state
-    entity_id: sun.sun
-  - platform: state
-    entity_id: binary_sensor.seb_pc_active
-  condition: []
-  action:
-  - choose:
-    - conditions:
-      - condition: state
-        entity_id: binary_sensor.study_trisensor_motion
-        state: 'on'
-      - condition: or
-        conditions:
-        - condition: state
-          entity_id: binary_sensor.study_bright
-          state: 'off'
-        - condition: state
-          entity_id: sun.sun
-          state: below_horizon
-      sequence:
-      - service: light.turn_on
-        data: {}
-        target:
-          entity_id: light.study
-    default:
-    - condition: and
-      conditions:
-      - condition: state
-        entity_id: binary_sensor.study_trisensor_motion
-        state: 'off'
-      - condition: or
-        conditions:
-        - condition: state
-          entity_id: binary_sensor.seb_pc_active
-          state: 'off'
-        - condition: state
-          entity_id: binary_sensor.seb_pc_active
-          state: unavailable
-    - service: light.turn_off
-      data: {}
-      entity_id: light.study
-  mode: restart
-- id: Lounge_Lights
-  alias: Lounge - Lights
-  description: ''
-  trigger:
-  - platform: state
-    entity_id: binary_sensor.lounge_trisensor_motion
-  - entity_id: media_player.lounge_tv
-    platform: state
-  - entity_id: binary_sensor.lounge_bright
-    platform: state
-  condition: []
-  action:
-  - choose:
-    - conditions:
-      - condition: state
-        entity_id: binary_sensor.lounge_trisensor_motion
-        state: 'on'
-      - condition: state
-        entity_id: media_player.lounge_tv
-        state: 'off'
-      - condition: state
-        entity_id: binary_sensor.lounge_bright
-        state: 'off'
-      sequence:
-      - data:
-          brightness_pct: 100
-          transition: 3
-        service: light.turn_on
-        target:
-          entity_id: light.lounge
-    - conditions:
-      - condition: not
-        conditions:
-        - condition: state
-          entity_id: media_player.lounge_tv
-          state: 'off'
-      - condition: state
-        entity_id: binary_sensor.lounge_bright
-        state: 'off'
-      sequence:
-      - data:
-          brightness_pct: 30
-          transition: 3
-        service: light.turn_on
-        target:
-          entity_id: light.lounge
-    - conditions:
-      - condition: state
-        entity_id: binary_sensor.lounge_bright
-        state: 'on'
-      sequence:
-      - data:
-          transition: 3
-        service: light.turn_off
-        target:
-          entity_id: light.lounge
-    default:
-    - service: light.turn_off
-      data:
-        transition: 3
-      target:
-        entity_id: light.lounge
-  mode: restart
-- id: Toilet_Lights
-  alias: Toilet - Lights
-  description: ''
-  trigger:
-  - platform: state
-    entity_id: binary_sensor.toilet_trisensor_motion
-  - platform: state
-    entity_id: binary_sensor.toilet_bright
-  - platform: state
-    entity_id: sun.sun
-  condition: []
-  action:
-  - choose:
-    - conditions:
-      - condition: state
-        entity_id: binary_sensor.toilet_trisensor_motion
-        state: 'on'
-      - condition: or
-        conditions:
-        - condition: state
-          entity_id: sun.sun
-          state: below_horizon
-        - condition: state
-          entity_id: binary_sensor.toilet_bright
-          state: 'off'
-      sequence:
-      - service: light.turn_on
-        data: {}
-        target:
-          entity_id: light.toilet
-    default:
-    - service: light.turn_off
-      data: {}
-      entity_id: light.toilet
-  mode: restart
-- id: '1599502272442'
-  alias: Arm/Disarm Smart Home
-  description: ''
-  trigger:
-  - entity_id: binary_sensor.people_home
-    platform: state
-  condition: []
-  action:
-  - choose:
-    - conditions:
-      - condition: state
-        entity_id: binary_sensor.people_home
-        state: 'on'
-      sequence:
-      - scene: scene.all_on
-    default:
-    - scene: scene.all_off
-    - data: {}
-      entity_id: media_player.bedroom_tv,media_player.lounge_tv
-      service: media_player.turn_off
-  mode: single
-- id: Entrance_Lights
-  alias: Entrance - Lights
-  description: ''
-  trigger:
-  - entity_id: binary_sensor.entrance_door
-    platform: state
-    to: 'on'
-  - entity_id: binary_sensor.entrance_door
-    for: 00:00:30
-    platform: state
-    to: 'off'
-  condition: []
-  action:
-  - choose:
-    - conditions:
-      - condition: state
-        entity_id: binary_sensor.entrance_door
-        state: 'on'
-      - condition: state
-        entity_id: sun.sun
-        state: below_horizon
-      sequence:
-      - service: light.turn_on
-        data:
-          transition: 3
-          brightness_pct: 100
-        target:
-          entity_id: light.entrance
-    default:
-    - service: light.turn_off
-      data:
-        transition: 3
-      target:
-        entity_id: light.entrance
-  mode: restart
-- id: Hall_Lights
-  alias: Hall - Lights
-  description: ''
-  trigger:
-  - platform: state
-    entity_id: binary_sensor.hall_trisensor_motion
-  - platform: state
-    entity_id: input_boolean.sleep_mode
-  - platform: state
-    entity_id: binary_sensor.hall_bright
-  condition: []
-  action:
-  - choose:
-    - conditions:
-      - condition: state
-        entity_id: binary_sensor.hall_trisensor_motion
-        state: 'on'
-      - condition: state
-        entity_id: input_boolean.sleep_mode
-        state: 'off'
-      - condition: or
-        conditions:
-        - condition: state
-          entity_id: sun.sun
-          state: below_horizon
-        - condition: state
-          entity_id: binary_sensor.hall_bright
-          state: 'off'
-      sequence:
-      - service: light.turn_on
-        data:
-          brightness_pct: 60
-          transition: 3
-        target:
-          entity_id: light.hall
-    - conditions:
-      - condition: state
-        entity_id: binary_sensor.hall_trisensor_motion
-        state: 'on'
-      - condition: state
-        entity_id: input_boolean.sleep_mode
-        state: 'on'
-      - condition: or
-        conditions:
-        - condition: state
-          entity_id: sun.sun
-          state: below_horizon
-        - condition: state
-          entity_id: binary_sensor.hall_bright
-          state: 'off'
-      sequence:
-      - service: light.turn_on
-        data:
-          brightness_pct: 1
-        target:
-          entity_id: light.hall
-    default:
-    - service: light.turn_off
-      data:
-        transition: 3
-      target:
-        entity_id: light.hall
-  mode: restart
-- id: '1600767215396'
-  alias: Lounge - Camera
-  description: ''
-  trigger:
-  - platform: state
-    entity_id: binary_sensor.lounge_bright
-  - platform: state
-    entity_id: sun.sun
-  - platform: state
-    entity_id: light.lounge
-  condition: []
-  action:
-  - choose:
-    - conditions:
-      - condition: or
-        conditions:
-        - condition: state
-          entity_id: light.lounge
-          state: 'on'
-        - condition: state
-          entity_id: sun.sun
-          state: above_horizon
-      sequence:
-      - service: switch.turn_off
-        data: {}
-        entity_id: switch.loungecam_ir
-    default:
-    - service: switch.turn_on
-      data: {}
-      entity_id: switch.loungecam_ir
-  mode: single
-- id: '1607903674633'
-  alias: Zone Notification
-  description: ''
-  use_blueprint:
-    path: homeassistant/notify_leaving_zone.yaml
-    input:
-      person_entity: person.laura_ward
-      notify_device: a7476c800b5711eb974f83193b2e2ce2
-      zone_entity: zone.work
-- id: '1607903867651'
-  alias: Send a camera snapshot when motion is detected
-  description: ''
-  use_blueprint:
-    path: vorion/send-camera-snapshot-notification-on-motion.yaml
-    input:
-      delay: '0'
-      motion_sensor: binary_sensor.front_door_motion
-      camera: camera.front_door
-      notify_device: a7476c800b5711eb974f83193b2e2ce2
-- id: '1609590164306'
-  alias: Heating
-  description: ''
-  trigger:
-  - platform: state
-    entity_id: binary_sensor.people_home
-    to: 'on'
-  - platform: state
-    entity_id: input_number.target_temperature
-  condition:
-  - condition: state
-    entity_id: binary_sensor.people_home
-    state: 'on'
-  action:
-  - service: climate.turn_on
-    data: {}
-    entity_id: climate.central
-  - service: climate.set_temperature
-    data:
-      entity_id: climate.central
-      temperature: 19
-      hvac_mode: heat
-  - service: climate.set_temperature
-    data:
-      entity_id: climate.study
-      temperature: '{{ states(''input_number.target_temperature'') | float }}'
-      hvac_mode: heat
-  - service: climate.set_temperature
-    data:
-      entity_id: climate.bedroom
-      temperature: '{{ states(''input_number.target_temperature'') | float }}'
-      hvac_mode: heat
-  - service: climate.set_temperature
-    data:
-      entity_id: climate.bathroom
-      temperature: '{{ states(''input_number.target_temperature'') | float }}'
-      hvac_mode: heat
-  - service: climate.set_temperature
-    data:
-      entity_id: climate.toilet
-      temperature: 10
-      hvac_mode: heat
-  mode: single
-- id: '1609590240334'
-  alias: Heating Inactive
-  description: ''
-  trigger:
-  - platform: time
-    at: input_datetime.heating_inactive
-  - platform: state
-    entity_id: binary_sensor.people_home
-    to: 'no'
-  condition: []
-  action:
-  - service: climate.set_hvac_mode
-    data:
-      entity_id: all
-      hvac_mode: 'off'
-  mode: single
-- id: '1609698123494'
-  alias: Bin Reminder
-  description: ''
-  trigger:
-  - platform: template
-    value_template: '{{ is_state(''sensor.date_time'', (strptime(state_attr(''sensor.bin_collection_data'',
-      ''date''),''%Y-%m-%dT%H:%M:%SZ'') - timedelta( hours = 5 )).strftime( ''%Y-%m-%d,
-      %H:%M'')) }}'
-  condition: []
-  action:
-  - service: notify.mobiles
-    data:
-      message: '{{state_attr(''sensor.bin_collection'', ''Reminder'') }}'
-      data:
-        ttl: 0
-        priority: high
-  mode: single
-- id: '1617181757452'
-  alias: Dismiss New Devices Notification
-  description: ''
-  trigger:
-  - platform: state
-    entity_id: persistent_notification.config_entry_discovery
-    to: notifying
-  - platform: homeassistant
-    event: start
-  condition: []
-  action:
-  - service: persistent_notification.dismiss
-    data:
-      notification_id: config_entry_discovery
-  mode: single
-- id: '1617544596388'
-  alias: Set Theme on HA Start
-  description: ''
-  trigger:
-  - platform: homeassistant
-    event: start
-  condition: []
-  action:
-  - service: frontend.set_theme
-    data:
-      name: Home
-  mode: single
+# This file is used by the automations editor
+# in the Home Assistant frontend.
+#
+# I personally do not use it, mainly because I like doing this in YAML.
+# However, from time to time, it is helpful to click a bit and see
+# what the frontend makes of it.
+#
+# This file must exist for the frontend Automation editor to work.
+# Hence, it is here, empty. 
+#
+# If you are looking for my automations: See automations folder.
+[]
