Disable TV notify targets

--- a/configuration/notify.yaml
+++ b/configuration/notify.yaml
@@ -2,22 +2,22 @@
 # Notification Targets
 ####################################
 notify:
-  - platform: nfandroidtv
-    name: Bedroom TV
-    host: !secret bedroom_fire_tv
-  - platform: nfandroidtv
-    name: Shield
-    host: !secret shield_tv
-  - platform: nfandroidtv
-    name: Lounge TV
-    host: !secret lounge_tv
-  - name: Devices
-    platform: group
-    services:
-      - service: mobile_app_seb_phone
-      - service: mobile_app_laura_phone
-      - service: lounge_tv
-      - service: bedroom_tv
+#   - platform: nfandroidtv
+#     name: Bedroom TV
+#     host: !secret bedroom_fire_tv
+#   - platform: nfandroidtv
+#     name: Shield
+#     host: !secret shield_tv
+#   - platform: nfandroidtv
+#     name: Lounge TV
+#     host: !secret lounge_tv
+#   - name: Devices
+#     platform: group
+#     services:
+#       - service: mobile_app_seb_phone
+#       - service: mobile_app_laura_phone
+#       - service: lounge_tv
+#       - service: bedroom_tv
   - name: Mobiles
     platform: group
     services:
