--- a/sensors/distances.yaml
+++ b/sensors/distances.yaml
@@ -6,8 +6,8 @@
     laura_distance_from_home:
       friendly_name: "Laura's Distance from Home"
       unit_of_measurement: "km"
-      value_template: "{{ distance('person.laura_ward', 'zone.home') | round(2) }}"
+      value_template: "{% if is_state('device_tracker.laura_phone','home') %}0{% else %}{{ distance('person.laura_ward', 'zone.home') | round(2) }}{% endif %}"
     seb_distance_from_home:
       friendly_name: "Seb's Distance from Home"
       unit_of_measurement: "km"
-      value_template: "{{ distance('person.sebastian_burrell', 'zone.home') | round(2) }}"
+      value_template: "{% if is_state('device_tracker.seb_phone','home') %}0{% else %}{{ distance('person.sebastian_burrell', 'zone.home') | round(2) }}{% endif %}"
