--- a/sensors/energy.yaml
+++ b/sensors/energy.yaml
@@ -30,5 +30,5 @@
       unit_of_measurement: "kWh"
       value_template: "{{ (states('sensor.gas_daily_usage') | float + states('sensor.electricity_daily_usage') | float) | round(2) }}"
       attribute_templates:
-        interval_start: "{{ strptime(state_attr('sensor.gas_daily_usage', 'interval_start'),'%Y-%m-%dT%H:%M:%SZ').strftime('%d/%m/%Y') }}"
-        interval_end: "{{ strptime(state_attr('sensor.gas_daily_usage', 'interval_end'),'%Y-%m-%dT%H:%M:%SZ').strftime('%d/%m/%Y') }}"
+        interval_start: "{{ as_timestamp(state_attr('sensor.gas_daily_usage', 'interval_start')) | timestamp_local }}"
+        interval_end: "{{ as_timestamp(state_attr('sensor.gas_daily_usage', 'interval_end')) | timestamp_local }}"
